--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,68 @@
-body{
-    background:url("../images/background1.png");
-    color:rgb(255, 255, 255);
-}
-.container{
-    width : 918px;
-    height: 518px;
-    background: rgb(48, 62, 130);
-    margin-top: 50px;  
-    text-align: center;             
+
+html,
+body {
+  height: 100%;
 }
 
-h4{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 30px;
-    padding-top: 175px;
-
-
+body {
+  text-align: center;
+  background-image: url("../images/background1.png");
 }
 
-#start{
-position: relative;
-top:50px;
-font-size: 50px;
+#wrapper {
+  width: 960px;
+  min-height: 80%;
+  box-sizing: border-box;
+  padding: 5% 0;
+  margin: 5% auto;
+  background-color: rgb(48,62,130)
 }
 
-.answerDiv{
-   
-    padding-top: 50px;
-   
+#sub-wrapper {
+  position: relative;
+  top: 20%;
 }
 
-#timerDiv{
-    padding-top: 50px;
+button {
+  display: block;
+  width: 400px;
+  height: 100px;
+  margin: 10px auto 0;
+  font-size: 42px;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
 }
 
-#resetGame{
-
-
+h1 {
+  margin-bottom: 50px;
+  font-family: Geo, sans-serif;
+  font-size: 6.5em;
+  font-weight: bold;
+  color: white;
 }
 
-.resultDiv{
-  
+h2 {
+  margin-bottom: 25px;
+  font-size: 35px;
+}
+
+h3 {
+  margin-bottom: 10px;
+  font-size: 25px;
+}
+
+#start {
+  margin-top: 10%;
+  background: pink;
+  border: 2px solid blue;
+}
+
+#quiz-area h2 {
+  margin-top: 50px;
+}
+
+button:hover {
+  background: pink;
+  border: 2px solid blue;
 }
